# CChat

./: CMakeLists.txt  Chat.cpp  Chat.h  ContactList.cpp  ContactList.h  Message.cpp  Message.h  MessageNotifier.cpp  MessageNotifier.h  Observer.cpp  Observer.h  README.md  Subject.cpp  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ChatTest.cpp  MessageTest.cpp  UserTest.cpp  runAllTests.cpp
